Format and resolve errors, warnings, and sonar code smells